--- a/Planteer/plants/templates/plants/all-plant.html
+++ b/Planteer/plants/templates/plants/all-plant.html
@@ -8,13 +8,10 @@
     All Plants
 </h1>
 
-<h3>
-    Filter by Category
-</h3>
-    <div class="d-flex gap-2 align-items-center">
+    <div class="d-flex flex-row gap-2 align-items-center">
         <h5 class="m-0 p-0">Category: </h5>
         <form method="GET">
-            <select class="form-select" name="category">
+            <select  name="category">
                             
                 <option selected>Category</option>
                 <option value="fruits">Fruits</option>
@@ -26,6 +23,7 @@
 
             <button type="submit">Category Filter</button>         
         </form>
+        <h5 class="m-0 p-0">Is edible: </h5>
         <form method="GET">
   
             <select name="is_edible">
