--- a/Planteer/main/templates/main/base.html
+++ b/Planteer/main/templates/main/base.html
@@ -39,6 +39,13 @@
 
         {% endblock %}
     </main>
+
+    <div class="card">
+        <div class="card-body">
+            <p class="card-text">All Copyright are saved  for Bora Technology Company &copy; 2025</p>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
 </html>
