--- a/Planteer/plants/templates/plants/create-new-plant.html
+++ b/Planteer/plants/templates/plants/create-new-plant.html
@@ -19,7 +19,7 @@
                 <h3>
                     Enter the name of plant
                 </h3>
-                <input type="text" placeholder="Plant Name" name="name" class="form-control" required minlength="5" maxlength="512"/>
+                <input type="text" placeholder="Plant Name" name="name" class="form-control" required minlength="3" maxlength="512"/>
                 
                 <h3>
                     Write down a short description about plant
@@ -87,4 +87,6 @@
 
         </div>
     </div>
+
+<!-- {{plant_form.as_p}} لعرض بيانات form -->    
 {% endblock %}
