--- a/Planteer/plants/templates/plants/search-plant.html
+++ b/Planteer/plants/templates/plants/search-plant.html
@@ -4,11 +4,37 @@
 {% block title %}Search Results{% endblock %}
 
 {% block content %}
-<h1>
-    Search Results {{plants.count}}
-</h1>
 
-<div class="row mt-2 row-cols-1 row-cols-md-3 g-4 d-flex justify-content-center">
+{% if plants %}
+    <h1 class="m-3">
+        Search Results {{plants.count}}
+    </h1>
+    <h5 class="m-3">results for: "{{ request.GET.search }}"</h5>
+
+    <div class="d-flex justify-content-end m-3">
+        <form action="{% url 'plants:plant_search_view' %}" method="GET">
+
+            <div class="d-flex gap-2">
+
+                <input type="search" class="form-control" value="{{request.GET.search}}" name="search" required minlength="1">
+
+                <select name="OrderBy" id="" class="form-select">
+                    <option value="">Order By</option>
+                    <option value="name" {% if request.GET.OrderBy == 'name' %} selected {% endif %}>Name</option>
+                    <option value="release_date" {% if request.GET.OrderBy == 'release_date' %} selected {% endif %}>Release date</option>
+                </select>
+
+                <input type="submit" value="apply" class="btn btn-primary">                
+            </div>
+
+        </form>
+    </div>
+
+{% else %}
+    <p class="bg-warning p-3 rounded" > No results found for your search {{ request.GET.search }}</p>
+{% endif %}
+
+<div class="row mt-2 row-cols-1 row-cols-md-3 g-4 d-flex justify-content-center ">
 
     {% for plant in plants %}
       <div class="col">
