--- a/Planteer/plants/templates/plants/create-new-plant.html
+++ b/Planteer/plants/templates/plants/create-new-plant.html
@@ -71,16 +71,6 @@
                         <option value="False" > No </option>
                 </select> 
 
-
-
-                <!--
-                <h3>
-                    Created at
-                </h3>
-                <input type="date" name="created_at" class="form-control"/>
-                
-                -->
-
                 <input type="submit" value="Create Plant Post" class="btn btn-primary mt-4" />
                 
             </form>
@@ -88,5 +78,5 @@
         </div>
     </div>
 
-<!-- {{plant_form.as_p}} لعرض بيانات form -->    
+<!-- {{plant_form.as_p}} لعرض بيانات forml -->    
 {% endblock %}
