--- a/Planteer/main/templates/main/base.html
+++ b/Planteer/main/templates/main/base.html
@@ -31,6 +31,29 @@
                 <li class="nav-item">
                     <a class="nav-link {% if request.path == contact_url %} active {% endif %}" href="{{contact_url}}">Contact us</a>
                 </li>
+                <li class="nav-item">
+                    {% if request.user.is_authenticated %}
+                        <div class="d-flex gap-1 align-items-center">
+                            <h6 class="p-0 m-0 text-white" >
+                                welcome {{ request.user.username }}
+                            </h6>
+                            <a href="{% url 'accounts:logout' %}" class="nav-item" > Logout </a>
+                        </div>
+                    {% else %}
+                        <div class="dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+                            <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Separated link</a></li>
+                            </ul>                            
+                        </div>
+                    {% endif %}
+                    
+
+                </li>
 
             </ul>
 
